# proraf_backend

./: .dockerignore  .env.example  .gitignore  Dockerfile  Dockerfile.dev  FIX_DOCUMENTATION.md  GOOGLE_OAUTH_GUIDE.md  IMPLEMENTATION_SUMMARY.md  Makefile  ProRAF_API_Postman_Collection.json  README.md  UPLOAD_IMAGES.md  WHATSAPP_API_EXAMPLES.md  WHATSAPP_INTEGRATION.md  WHATSAPP_LIST_PRODUCTS.md  WHATSAPP_NEW_FEATURES.md  WhatsApp_Postman_Collection.json  alembic.ini  client_secret.json  docker-compose.yml  example_image_upload.py  example_product_with_image.py  example_user_tracking.py  pyproject.toml  test_api.py  test_bcrypt.py  test_fix_endpoint.py  test_whatsapp_integration.py  test_whatsapp_routes.py  testes.sh
.github/workflows/: ci.yml
alembic/: env.py  script.py.mako
alembic/versions/: 0d5696186205_add_blockchain_fields_to_batch_and_.py  35b5bda22c39_make_senha_nullable_for_oauth_users.py  36929e0b4754_add_google_oauth_fields_to_user.py  454a825713d0_add_unique_constraints_cpf_cnpj_telefone.py  5a9bb9d46b99_restore_missing_revision_link.py  8d22053b54ff_add_unidade_medida_to_batch.py  9da02619a4fe_add_unidade_medida_to_batch.py  a77dc48ea19d_add_user_id_field_to_products_table.py  a7b0453c950c_make_password_nullable_for_oauth.py  abc249a965c3_initial_migration.py  b7f3e2c1a4d9_set_default_user_avatar.py  c2f7a3e1d8b4_add_nit_to_users_table.py  e0b810dbac1d_update_product_image_field_length.py
proraf/: __init__.py  app.py  config.py  database.py  oauth2_config.py  security.py
proraf/models/: __init__.py  batch.py  field_data.py  movement.py  product.py  user.py
proraf/routers/: __init__.py  admin_dashboard.py  auth.py  batches.py  field_data.py  google_auth.py  movements.py  print_labels.py  products.py  public.py  traking.py  user_profile.py  users.py  whatsapp.py
proraf/schemas/: __init__.py  batch.py  field_data.py  movement.py  pagination.py  product.py  user.py  whatsapp.py
proraf/services/: __init__.py  file_service.py  google_oauth_service.py  print_service.py  qrcode_service.py
scripts/: test_print.py
static/templates/: etiquetaExemplo.prn
tests/: conftest.py  factories.py  test_auth.py  test_batches.py  test_blockchain.py  test_dashboard.py  test_movements.py  test_products.py  test_public_routes.py  test_traking.py  test_user.py  test_user_profile.py  test_whatsapp.py
