[tool.poetry]
name = "proraf"
version = "0.1.0"
description = "Sistema ProRAF - API de Rastreabilidade Agrícola"
authors = ["Rafael Nogueira <rafaelnogueira.aluno@unipampa.edu.br>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.118.2"
uvicorn = {extras = ["standard"], version = "^0.24.0"}
sqlalchemy = "^2.0.23"
alembic = "^1.12.1"
pydantic = {extras = ["email"], version = "^2.12.0"}
pydantic-settings = "^2.11.0"
python-jose = {extras = ["cryptography"], version = "^3.3.0"}
passlib = {extras = ["bcrypt"], version = "^1.7.4"}
python-multipart = "^0.0.6"
python-dotenv = "^1.0.0"
httpx = "^0.25.2"
bcrypt = "4.0.1"
pillow = "^10.0.0"
aiofiles = "^23.0.0"
image = "^1.5.33"
google-auth = "^2.41.1"
google-auth-oauthlib = "^1.2.2"
google-auth-httplib2 = "^0.2.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.3"
pytest-cov = "^4.1.0"
pytest-asyncio = "^0.21.1"
factory-boy = "^3.3.0"
faker = "^20.1.0"
taskipy = "^1.12.2"
ruff = "^0.1.6"
httpx = "^0.25.2"

[tool.taskipy.tasks]
dev = "uvicorn proraf.app:app --reload --host 127.0.0.1 --port 8000"
test = "pytest -v -s --cov=proraf --cov-report=term-missing"
lint = "ruff check . --fix"
format = "ruff format ."
migrate = "alembic upgrade head"
makemigrations = "alembic revision --autogenerate -m"
init-db = "alembic upgrade head"
test-print = "python scripts/test_print.py"
print-info = "python -c \"import win32print; printers = [printer[2] for printer in win32print.EnumPrinters(2)]; print('Impressoras disponíveis:'); [print(f'  - {printer}') for printer in printers]; print(f'Total: {len(printers)} impressoras')\""
quick-test = "python -c \"from proraf.services.print_service import ProductLabelPrinter; printer = ProductLabelPrinter(); print('Testing printer...'); result = printer.print_product_label({'produto_nome': 'Teste', 'peso': '500g', 'empresa': 'Empresa Teste', 'endereco': 'Rua Teste, 123', 'cpf': '123.456.789-00', 'telefone': '(00) 1234-5678', 'validade': '31/12/2025', 'codigo_produto': 'PRD-TESTE', 'codigo_lote': 'LOT-TESTE', 'url_rastreio': 'http://proraf.unihacker.club:8000/rastreio?search=LOT-TESTE'}); print(f'Print result: {result}')\""

[tool.pytest.ini_options]
pythonpath = "."
addopts = "-v --cov=proraf"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"